Bug 1859660 - Compute the current value for the replaced transition running on the compositor. r=firefox-style-system-reviewers,zrhoffman

We rely on the current value to check if we have to create a transition
to replace the running one, and if the running transition is on the
compositor, we don't have the up-do-date transition rule on the main
thread, so we have to compute it when trying to create a new transition.

Differential Revision: https://phabricator.services.mozilla.com/D213687