layout/style/nsTransitionManager.cpp
@@ -201,10 +201,12 @@ static nsTArray<Keyframe> GetTransitionKeyframes(
   return keyframes;
 }
 
-static Maybe<CSSTransition::ReplacedTransitionProperties>
-GetReplacedTransitionProperties(const CSSTransition* aTransition,
-                                const DocumentTimeline* aTimelineToMatch) {
-  Maybe<CSSTransition::ReplacedTransitionProperties> result;
+using ReplacedTransitionProperties =
+    CSSTransition::ReplacedTransitionProperties;
+static Maybe<ReplacedTransitionProperties> GetReplacedTransitionProperties(
+    const CSSTransition* aTransition,
+    const DocumentTimeline* aTimelineToMatch) {
+  Maybe<ReplacedTransitionProperties> result;
 
   // Transition needs to be currently running on the compositor to be
   // replaceable.
@@ -239,7 +241,7 @@ GetReplacedTransitionProperties(const CSSTransition* aTransition,
   const AnimationPropertySegment& segment =
       keyframeEffect->Properties()[0].mSegments[0];
 
-  result.emplace(CSSTransition::ReplacedTransitionProperties(
+  result.emplace(ReplacedTransitionProperties(
       {aTransition->GetStartTime().Value(), aTransition->PlaybackRate(),
        keyframeEffect->SpecifiedTiming(), segment.mTimingFunction,
        segment.mFromValue, segment.mToValue}));
@@ -293,12 +295,58 @@ bool nsTransitionManager::ConsiderInitiatingTransition(
     return nullptr;
   }();
 
+  // For compositor animations, |aOldStyle| may have out-of-date transition
+  // rules, and it may be equal to the |endValue| of a reversing transition by
+  // accidentally. This causes Servo_ComputedValues_ShouldTransition() returns
+  // an incorrect result. Therefore, we have to recompute the current value if
+  // this transition is running on the compositor, to make sure we create the
+  // transition properly. Here, we precompute the progress and collect the
+  // necessary info, so Servo_ComputedValues_ShouldTransition() could compute
+  // the current value if needed.
+  // FIXME: Bug 1634945. We should use the last value from the compositor as the
+  // current value.
+  Maybe<ReplacedTransitionProperties> replacedTransitionProperties;
+  Maybe<double> progress;
+  if (oldTransition) {
+    // If this new transition is replacing an existing transition that is
+    // running on the compositor, we store select parameters from the replaced
+    // transition so that later, once all scripts have run, we can update the
+    // start value of the transition using TimeStamp::Now(). This allows us to
+    // avoid a large jump when starting a new transition when the main thread
+    // lags behind the compositor.
+    //
+    // Note: We compute this before calling
+    // Servo_ComputedValues_ShouldTransition() so we can reuse it for computing
+    // the current value and setting the replaced transition properties later in
+    // this function. Also, |replacedTransitionProperties| is Nothing() if the
+    // running transition is not on the compositor.
+    const dom::DocumentTimeline* timeline = aElement->OwnerDoc()->Timeline();
+    replacedTransitionProperties =
+        GetReplacedTransitionProperties(oldTransition, timeline);
+    progress = replacedTransitionProperties.andThen(
+        [&](const ReplacedTransitionProperties& aProperties) {
+          const dom::AnimationTimeline* timeline = oldTransition->GetTimeline();
+          MOZ_ASSERT(timeline);
+          return CSSTransition::ComputeTransformedProgress(*timeline,
+                                                           aProperties);
+        });
+  }
+
   AnimationValue startValue, endValue;
   const StyleShouldTransitionResult result =
       Servo_ComputedValues_ShouldTransition(
           &aOldStyle, &aNewStyle, &property, aBehavior,
           oldTransition ? oldTransition->ToValue().mServo.get() : nullptr,
-          &startValue.mServo, &endValue.mServo);
+          replacedTransitionProperties
+              ? replacedTransitionProperties->mFromValue.mServo.get()
+              : nullptr,
+          // Note: It's possible to replace the keyframes by Web Animations API,
+          // so we have to pass the mToValue from the keyframe segment, to make
+          // sure this value is aligned with mFromValue.
+          replacedTransitionProperties
+              ? replacedTransitionProperties->mToValue.mServo.get()
+              : nullptr,
+          progress.ptrOr(nullptr), &startValue.mServo, &endValue.mServo);
 
   // If we got a style change that changed the value to the endpoint
   // of the currently running transition, we don't want to interrupt
@@ -403,15 +451,6 @@ bool nsTransitionManager::ConsiderInitiatingTransition(
   }
 #endif
   if (oldTransition) {
-    // If this new transition is replacing an existing transition that is
-    // running on the compositor, we store select parameters from the replaced
-    // transition so that later, once all scripts have run, we can update the
-    // start value of the transition using TimeStamp::Now(). This allows us to
-    // avoid a large jump when starting a new transition when the main thread
-    // lags behind the compositor.
-    const dom::DocumentTimeline* timeline = aElement->OwnerDoc()->Timeline();
-    auto replacedTransitionProperties =
-        GetReplacedTransitionProperties(oldTransition, timeline);
     if (replacedTransitionProperties) {
       transition->SetReplacedTransition(
           std::move(replacedTransitionProperties.ref()));
