servo/ports/geckolib/glue.rs
@@ -1226,13 +1226,18 @@ fn is_transitionable(prop: PropertyDeclarationId, behavior: computed::Transition
     }
 }
 
+// Note: |new| is the after-change style; however, |old| is the computed values as of the previous
+// style change event, and it includes the running transitions and animations.
 #[no_mangle]
 pub extern "C" fn Servo_ComputedValues_ShouldTransition(
     old: &ComputedValues,
     new: &ComputedValues,
     prop: &structs::AnimatedPropertyID,
     behavior: computed::TransitionBehavior,
-    old_transition_value: Option<&AnimationValue>,
+    old_transition_end_value: Option<&AnimationValue>,
+    current_start_value: Option<&AnimationValue>,
+    current_end_value: Option<&AnimationValue>,
+    progress: Option<&f64>,
     start: &mut structs::RefPtr<AnimationValue>,
     end: &mut structs::RefPtr<AnimationValue>,
 ) -> ShouldTransitionResult {
@@ -1248,8 +1253,11 @@ pub extern "C" fn Servo_ComputedValues_ShouldTransition(
         return Default::default();
     };
 
-    if let Some(old_transition_value) = old_transition_value {
-        if *old_transition_value == new_value {
+    // If the element has a running transition for the property, there is a matching
+    // transition-property value, and the end value of the running transition is not equal to the
+    // value of the property in the after-change style.
+    if let Some(old_transition_end_value) = old_transition_end_value {
+        if *old_transition_end_value == new_value {
             return ShouldTransitionResult {
                 should_animate: false,
                 old_transition_value_matches: true,
@@ -1260,14 +1268,50 @@ pub extern "C" fn Servo_ComputedValues_ShouldTransition(
     let Some(old_value) = AnimationValue::from_computed_values(prop, old) else {
         return Default::default();
     };
-    if old_value == new_value ||
-        (matches!(behavior, computed::TransitionBehavior::Normal) &&
-            !old_value.interpolable_with(&new_value))
+
+    // For main thread animations, it's fine to use |old_value| because it represents the value in
+    // before-change style [1] if not transitions and animations, or the current value [2] if it
+    // has a running transition.
+    // If this property has a running transition on the compositor, |old_value| may be invalid, and
+    // we have to compute the current value here to make sure the check of
+    // `current_or_old_value == new_value` below makes sense.
+    //
+    // Note: For compositor animaitons, in we may only compose the transition rule only once when
+    // creating the transition on the main thread. And then we throttle the animations, so the
+    // transition rules in |old| are out-of-date. This means |old_value| is not equal to current
+    // value. In some cases, it could be equal to the start value of the running transition. This
+    // situation prevent us from creating a reversing transition. Therefore, it's necessay to
+    // compute current value if needed, for compositor animations.
+    //
+    // [1] https://drafts.csswg.org/css-transitions-1/#before-change-style
+    // [2] https://drafts.csswg.org/css-transitions-1/#current-value
+    let current_value = match (current_start_value, current_end_value, progress) {
+        (Some(from), Some(to), Some(p)) => {
+            // Compute the current value for the compositor animations.
+            from.animate(to, Procedure::Interpolate { progress: *p }).ok()
+        },
+        _ => None,
+    };
+
+    // Per spec (https://drafts.csswg.org/css-transitions-1/#starting):
+    // 1. If the element does not have a running transition for the property, we have to check if
+    //    the before-change style is different from the after-change style for that property, and
+    //    if the values for the property are transitionable.
+    // ...
+    // 4. If the element has a running transition for the property, there is a matching
+    //    transition-property value, and the end value is not equal to the value of the property
+    //    in the after-change style. Also, if the **current value** of the property in the
+    //    running transition is equal to the value of the property in the after-change style, or
+    //    if these two values are not transitionable. In this case, we don't create new
+    //    transition and we will cancel the running transition.
+    let current_or_old_value = current_value.unwrap_or(old_value);
+    if current_or_old_value == new_value ||
+        matches!(behavior, computed::TransitionBehavior::Normal if !current_or_old_value.interpolable_with(&new_value))
     {
         return Default::default();
     }
 
-    start.set_arc(Arc::new(old_value));
+    start.set_arc(Arc::new(current_or_old_value));
     end.set_arc(Arc::new(new_value));
 
     ShouldTransitionResult {
